--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+     <!-- icones do remixicon -->
+     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -22,8 +23,8 @@
             <h3 class="profession">Aprendiz de Dev</h3>
 
             <div>
-                <a href="https://www.linkedin.com/in/renan-henrique-da-rocha-724a087a/">Linkedin</a>
-                <a href="https://github.com/EducAgro">GitHub</a>
+                <a href="https://www.linkedin.com/in/renan-henrique-da-rocha-724a087a/" target="_blank" ><i class="ri-linkedin-box-fill"></i></a>
+                <a href="https://github.com/EducAgro" target="_blank"><i class="ri-github-fill"></i></a>
             </div>
         </div>
     </main>  
